--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.10.7",
-    "react": "^18.2.0"
+    "astro": "^2.10.7"
   },
   "devDependencies": {
     "sass": "^1.65.1"
