--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "b5-astro-label",
+  "name": "sneak",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,7 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.10.7"
+    "astro": "^2.10.7",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "sass": "^1.65.1"
